--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,16 +1,16 @@
-html,
-body {
-  padding: 0;
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+@tailwind base;
+@tailwind components;
+.title {
+    @apply text-5xl text-center;
+    color: green;
+    line-height: 1.15;
 }
 
-a {
-  color: inherit;
-  text-decoration: none;
+.body {
+    max-width: 1200px;
+    width: 1000px;
+    margin: 0 auto;
+    border: 1px solid black;
 }
 
-* {
-  box-sizing: border-box;
-}
+@tailwind utilities;
